[workspace]
resolver = "3"
members = [
  "erezd",
  "erez_lib",
  "erez_test",
]

[workspace.dependencies]
anyhow = "1.0.98"
askama = { version = "0.15" }
axum = "0.8"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
erez_lib = { path = "./erez_lib" }
erez_test = { path = "./erez_test" }
futures = "0.3"
ipnet = "2.11.0"
libc = "0.2"
libbpf-cargo = "0.25"
libbpf-rs = "0.25"
netgauze-bgp-pkt = { path = "./netgauze/bgp-pkt" }
netgauze-bgp-speaker = { path = "./netgauze/bgp-speaker" }
netgauze-iana = { path = "./netgauze/iana" }
netlink-packet-route = "0.28"
network-interface = "2.0.1"
nix = { version = "0.30.1", features = ["signal", "time"] }
prometheus-client = "0.25"
rand = "0.9"
rtnetlink = "0.20"
serde = "1.0.219"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "signal", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Turn off these "pedantic" lints.
doc_link_with_quotes = "allow"
doc_markdown = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
wildcard_imports = "allow"
