[package]
name = "erezd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "erezd"
path = "src/main.rs"

[build-dependencies]
libbpf-cargo.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
erez_lib.workspace = true
ipnet.workspace = true
libc.workspace = true
libbpf-rs.workspace = true
netgauze-bgp-pkt.workspace = true
netgauze-bgp-speaker.workspace = true
netgauze-iana.workspace = true
network-interface.workspace = true
nix.workspace = true
prometheus-client.workspace = true
serde.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
erez_test.workspace = true

[lints]
workspace = true
