[package]
name = "netgauze-bgp-speaker"
version = "0.8.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BGP Speaker: Establish connection and exchange messages with other BGP peers
"""
keywords = ["bgp", "protocol"]
categories = ["network-programming"]

[dependencies]
netgauze-bgp-pkt = { path = "../bgp-pkt", features = ["codec"] }
netgauze-iana = { path = "../iana" }
netgauze-parse-utils = { path = "../parse-utils" }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3"
pin-project = "1.1"
tokio-stream = { version = "0.1", features = ["net"] }
log = "0.4"
rand = { version = "0.9", features = ["small_rng"] }
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }

arbitrary = { version = "1", optional = true }
arbitrary_ext = { version = "0.3", optional = true }

[features]
fuzz = ["arbitrary", "arbitrary_ext"]

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
test-log = "0.2"
clap = { version = "4.5", features = ["derive"] }
