[package]
name = "netgauze-iana"
version = "0.8.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Collection of generic Internet Naming Authority (IANA) definitions that are not specific to a single protocol.
"""
keywords = ["protocol", "iana"]
categories = ["network-programming"]

[dependencies]
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
arbitrary = { version = "1", optional = true }
serde_json = "1"

[features]
default = []
fuzz = ["arbitrary"]
